feature/#5 : 응답 반환 통일하면서 폼 메서드 추가